--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,9 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= manpages
+SUBDIRS 		= manpages unitguide
 EXTRA_DIST 		= *.html *.css
 
+.PHONY: unitguide
+
+unitguide:
+	cd unitguide && make unitguide
