--- a/Makefile.in
+++ b/Makefile.in
@@ -198,6 +198,8 @@ host_vendor = @host_vendor@
 htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
+inst_win32_DLL_dir = @inst_win32_DLL_dir@
+inst_win32_build_dir = @inst_win32_build_dir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
@@ -216,7 +218,7 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = source data doc installer
+SUBDIRS = source data doc installer 
 EXTRA_DIST = asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm
 AUTOMAKE_OPTIONS = foreign
 all: config.h
@@ -421,7 +423,7 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/.
+	$(mkdir_p) $(distdir)/. $(distdir)/installer
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
@@ -669,6 +671,9 @@ tarball:
 
 pbpinstaller: 
 	cd $(top_srcdir)/installer && make pbpinstaller 
+
+unitguide:
+	cd doc && make unitguide
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
