--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -232,6 +232,8 @@ host_vendor = @host_vendor@
 htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
+inst_win32_DLL_dir = @inst_win32_DLL_dir@
+inst_win32_build_dir = @inst_win32_build_dir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
