--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,3 +1,3 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= triangul sdlmm paragui loki @SdlSoundDir@ @LIBBZ2@ 
+SUBDIRS 		= triangul sdlmm paragui loki pngwriter @SdlSoundDir@ @LIBBZ2@ 
