--- a/source/tools/win/mount.vcproj
+++ b/source/tools/win/mount.vcproj
@@ -36,7 +36,7 @@
 				Name="VCLinkerTool"
 				AdditionalOptions="/FORCE:MULTIPLE"
 				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib sigc-1.2.debug.lib"
-				OutputFile="$(SolutionDir)\$(ConfigurationName)\binmount.exe"
+				OutputFile="$(SolutionDir)\$(ConfigurationName)\bin\mount.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/Debug&quot;;&quot;$(libsigcpp)\MSVC_Net2003\$(ConfigurationName)\&quot;;&quot;$(OutDir)/lib&quot;;&quot;../../$(ConfigurationName)/lib/&quot;"
 				GenerateDebugInformation="TRUE"
