--- a/source/graphics/Makefile.am
+++ b/source/graphics/Makefile.am
@@ -5,6 +5,6 @@ AM_CXXFLAGS		= @SDL_CFLAGS@ @SIGC_CFLAGS@
 
 noinst_LTLIBRARIES 	= libgraphics.la
 
-libgraphics_la_SOURCES	= surface.cpp blitter.cpp drawing.cpp
+libgraphics_la_SOURCES	= surface.cpp blitter.cpp drawing.cpp surface2png.cpp
 libgraphics_la_LIBADD		= @SDL_LIBS@ 
 
