--- a/configure.in
+++ b/configure.in
@@ -607,14 +607,16 @@ railstations2.map *.raw *.fnt \
 *.gif *.asctxt *.gfx"
 
 dnl what gehts packed into main.con (the data container file)
-AC_SUBST([MAINCONDATA])
+AC_SUBST(MAINCONDATA)
 
 AC_CHECK_FILES( data/music/frontiers.ogg data/music/time_to_strike.ogg data/music/machine_wars.ogg,,missingmusic=x )
 if test "x$missingmusic" != xx ; then
   MUSICDIR=music
+else
+  MUSICDIR=""
 fi
 
-AC_SUBST([MUSICDIR])
+AC_SUBST(MUSICDIR)
 
 AC_CONFIG_FILES( [ Makefile \
        asc.spec \
