--- a/configure.in
+++ b/configure.in
@@ -470,8 +470,25 @@ dnl Checks for other header files.
 AC_HEADER_DIRENT
 AC_HEADER_TIME
 
-MY_EXPAND_DIR(game_datadir, "$datadir/games/$PACKAGE" )
-AC_DEFINE_UNQUOTED( GAME_DATADIR, "$game_datadir",  [The directory in which the data files are going to be installed])
+
+AC_DEFUN([AC_DEFINE_DIR], [
+  prefix_NONE=
+  exec_prefix_NONE=
+  test "x$prefix" = xNONE && prefix_NONE=yes && prefix=$ac_default_prefix
+  test "x$exec_prefix" = xNONE && exec_prefix_NONE=yes && exec_prefix=$prefix
+dnl In Autoconf 2.60, ${datadir} refers to ${datarootdir}, which in turn
+dnl refers to ${prefix}.  Thus we have to use `eval' twice.
+  eval ac_define_dir="\"$2\""
+  eval ac_define_dir="\"$ac_define_dir\""
+  eval ac_define_dir="\"$ac_define_dir\""
+  AC_SUBST($1, "$ac_define_dir")
+  AC_DEFINE_UNQUOTED($1, "$ac_define_dir", [$3])
+  test "$prefix_NONE" && prefix=NONE
+  test "$exec_prefix_NONE" && exec_prefix=NONE
+])
+
+AC_DEFINE_DIR(GAME_DATADIR,$datadir/games/$PACKAGE, [The directory in which the data files are going to be installed])
+dnl AC_DEFINE_UNQUOTED( GAME_DATADIR, "$game_datadir",  [The directory in which the data files are going to be installed])
 
 dnl *************************************************************************
 dnl Checks for typedefs, structures, and compiler characteristics.
