Added gpraphic exchange

--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -14,11 +14,11 @@ libdialogs_la_SOURCES   = editmapparam.cpp cargowidget.cpp selectionwindow.cpp f
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
 libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp \
-                              editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp
+                              editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp productionanalysis.cpp
                               
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
-libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp
+libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp exchangegraphics.cpp
 libmapeddialogs_la_LIBADD    = @SDL_LIBS@
 
 EXTRA_DIST=$(srcdir)/*.h
