--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -206,6 +206,9 @@
 				RelativePath="..\..\..\explosivemines.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\fieldimageloader.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\gameevent_dialogs.cpp">
 			</File>
 			<File
@@ -443,6 +446,9 @@
 				</File>
 				<File
 					RelativePath="..\..\..\dialogs\eventeditor.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\dialogs\exchangegraphics.cpp">
 				</File>
 				<File
 					RelativePath="..\..\..\dialogs\fieldmarker.cpp">
