--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,1.99.90.48)
+AC_INIT(asc,1.99.90.49)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -629,7 +629,7 @@ leergui.raw guiremov.raw  \
 hexmines.raw curshex2.raw markedfield.pcx curshex.raw \
 railstations2.map *.raw *.fnt \
 *.dat *.map helpsys?.txt message?.txt *.pcx lcac2.jpg \
-*.gif *.asctxt *.gfx"
+*.gif *.asctxt *.gfx *.ascmapxlat"
 
 dnl what gehts packed into main.con (the data container file)
 AC_SUBST(MAINCONDATA)
