Cleanup of headers  Fixed graphic driver selection  Added factory production limitation

--- a/source/unix/pbpedit/Makefile.am
+++ b/source/unix/pbpedit/Makefile.am
@@ -10,7 +10,7 @@ bin_PROGRAMS 		= asc_pbpedit
 
 nodist_asc_pbpedit_SOURCES 	= edevents.cpp edgen.cpp edglobal.cpp edmain.cpp \
 edselfnt.cpp edmisc.cpp typen.cpp strtmesg.cpp stack.cpp \
-spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp \
+spfst.cpp sgstream.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp \
 loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp \
 attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp \
 Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
