--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -9,7 +9,7 @@ AM_CXXFLAGS   = $(SDL_CFLAGS) -Dsgmain $(SIGC_CFLAGS)
 bin_PROGRAMS  = asc
 
 nodist_asc_SOURCES   = unitctrl.cpp soundList.cpp typen.cpp \
-strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp \
+strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp palette.cpp \
 newfont.cpp network.cpp misc.cpp loadpcxc.cpp loaders.cpp \
 loadbi3.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp \
 basestrm.cpp basegfx.cpp attack.cpp replaymapdisplay.cpp \
